# game_of_life

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  gol.cpp  gol.hpp  gol.sh  gol_gui.cpp  pyproject.toml
bindings/: CMakeLists.txt  gol_module.cpp
engine/: CMakeLists.txt
engine/include/gol/: grid.hpp  rle.hpp  text_pattern.hpp
engine/src/: grid.cpp  rle.cpp  text_pattern.cpp
old/: gol.cpp  gol_gui.cpp
python/gol/: __init__.py  cli.py
python/gol/llm/: client.py  config.py  tools.py
python/gol/patterns/: font.py  library.py
python/gol/tui/: app.py  chat_widget.py  controls_widget.py  grid_widget.py
tests/cpp/: test_grid.cpp  test_rle.cpp
tests/python/: test_cli.py  test_engine.py
